--- a/first.html
+++ b/first.html
@@ -4,49 +4,40 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			rel="shortcut icon"
+			href="./images/instagram.png"
+			type="image/x-icon"
+		/>
 		<title>First HTML</title>
 		<!-- Css File Link  -->
 		<link rel="stylesheet" href="./css/style.css" />
 	</head>
 	<body>
-		paragraph ar size : 16px - 22px
-		<p>
-			Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt nihil
-			perferendis ducimus voluptates nobis molestiae!
-		</p>
-		<p>
-			Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt nihil
-			perferendis ducimus voluptates nobis molestiae!
-		</p>
+		<!-- div hocce akta faka box -->
+		<!-- div akta block level element -->
 
-		<!-- jodi akta value dewa hoi tahole aita chardike kaj kore -->
+		<!-- Navigation Menu Design  -->
+		<div class="nav">
+			<div><h1 class="logo">Sahadat</h1></div>
+			<div class="menu">
+				<a href="">Home</a>
+				<a href="">About Us</a>
+				<a href="">FAQ</a>
+				<a href="">Blog</a>
+				<a href="">Contact</a>
+			</div>
+		</div>
 
-		<!-- ar jodi 2 ta value dewa hoi tahole prothom value upore ar niche kaj kore abong 2nd value bame abong dane kaj kore-->
-
-		<!-- Jodi style ta html tag ar vitore apply kora hoi tahole setake inline style  -->
-
-		<!-- 
-		1. Inline Style
-		2. Internal Style 
-		3. External Style  
-	-->
-		<h1>
-			Website Designer and Developer Website Designer and Developer Website
-			Designer and Developer
-		</h1>
-
-		<h1>
-			Website Designer and Developer Website Designer and Developer Website
-			Designer and Developer
-		</h1>
-		<blockquote>
-			Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel nostrum,
-			consequuntur, quidem rem culpa reiciendis doloribus possimus ducimus esse
-			ad eveniet voluptatum tempora, aut ab illum consequatur. Qui ratione
-			dolores hic a, debitis maiores amet vitae. Nihil dolorum itaque sunt!
-		</blockquote>
-
-		<h1>Mr Rohim Uddin</h1>
-		<h1>Mr Rohim Uddin</h1>
+		<!-- with div  -->
+		<!-- div>h1{This is a hero section}+p{lorem20}+a{Contact Me} -->
+		<div class="background">
+			<h1 class="hero-title">This is a hero section</h1>
+			<p class="hero-para">
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit vel ipsa
+				reiciendis dolorum quam nulla praesentium fugiat aliquam debitis dolore.
+			</p>
+			<a href="" class="hero-btn">Contact Me</a>
+		</div>
 	</body>
 </html>
